--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: client_exec_interactive
-          path: target/release/examples/client_exec_interactive
+          name: target_results
+          path: target/
