--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,8 +21,11 @@ jobs:
           cd russh
           cargo build --release --example client_exec_interactive
 
+      - name: Check
+        run: ls -lh
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: target_results
-          path: target/
+          path: .
