--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: target_results
-          path: .
+          name: russh_client-linux
+          path: russh/target/release/examples/client_exec_interactive
